2002-11-25  David Hyatt  <hyatt@apple.com>

	Rewrite the img/form document property lookup strategy.  This
	should be faster and actually work (gasp!).  Fixes the dhtml
	on hrweb to at least show up.
	
        * khtml/ecma/kjs_html.cpp:
        (KJS::HTMLDocument::tryGet):
        * khtml/html/html_miscimpl.cpp:
        (HTMLCollectionImpl::nextItem):

2002-11-25  David Hyatt  <hyatt@apple.com>

	Add support to QFont for multiple families.  NOw all that's left
	is getting the multiple families out of the font and down into
	WebKit.
	
        * khtml/css/cssstyleselector.cpp:
        * khtml/rendering/font.cpp:
        (Font::update):
        * khtml/rendering/font.h:
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::recalcStyle):
        * kwq/KWQFont.h:
        * kwq/KWQFont.mm:
        (QFontFamily::QFontFamily):
        (QFontFamily::operator=):
        (QFontFamily::family):
        (QFontFamily::setFamily):
        (QFontFamily::operator==):
        (QFont::QFont):
        (QFont::family):
        (QFont::setFamily):
        (QFont::getNSFontWithFamily):

2002-11-25  Richard Williamson   <rjw@apple.com>

        Changes for back/forward.  Currently disabled.

        * ForwardingHeaders/kjs/property_map.h: Added.
        * khtml/ecma/kjs_window.cpp:
        (Window::hasTimeouts):
        (WindowQObject::hasTimeouts):
        * khtml/ecma/kjs_window.h:
        * khtml/khtmlpart_p.h:
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::DocumentImpl):
        (DocumentImpl::detach):
        (DocumentImpl::inPageCache):
        (DocumentImpl::setInPageCache):
        * khtml/xml/dom_docimpl.h:
        * kwq/KWQKHTMLPart.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::setView):
        (KWQKHTMLPart::userAgent):
        (KWQKHTMLPart::nextKeyViewForWidget):
        (KWQKHTMLPart::canCachePage):
        (KWQKHTMLPart::saveWindowProperties):
        (KWQKHTMLPart::saveLocationProperties):
        (KWQKHTMLPart::restoreWindowProperties):